--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Natal Chart App</title>
 
-  <!-- Load AstroChart from your Hakaya fork -->
-  <script src="https://tsarinaha.github.io/Hakaya/dist/astrochart.min.js"></script>
+  <!-- Load the AstroChart script -->
+  <script src="https://tsarinaha.github.io/Hakaya/dist/astrochart.js"></script>
 
   <style>
     body {
@@ -81,7 +81,7 @@
       };
 
       try {
-        // POST the data to your backend API
+        // POST the data to your API
         const response = await fetch('https://astrologychartapi.onrender.com/calculate_chart/', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
@@ -115,7 +115,7 @@
         const planetsData = data.planets.map((planet) => ({
           name: planet.name,
           longitude: planet.longitude,
-          retrograde: false,  // Add retrograde status as false by default
+          retrograde: false,
         }));
 
         // Create a new chart using AstroChart
@@ -124,3 +124,23 @@
           600,
           600,
           {
+            planets: planetsData,
+            houses: data.cusps,
+            theme: {
+              planet: { color: 'blue' },
+              house: { borderColor: 'gray' },
+              aspect: { lineColor: 'red' },
+            },
+          }
+        );
+
+        // Draw the radix (base) chart
+        chart.radix();
+      } catch (error) {
+        console.error("Error rendering chart:", error);
+        alert(`Error rendering chart: ${error.message}`);
+      }
+    }
+  </script>
+</body>
+</html>
