--- a/index.html
+++ b/index.html
@@ -103,44 +103,44 @@
     });
 
     // Function to render the natal chart using AstroChart
-    function renderChart(data) {
-      try {
-        console.log("API Response:", data);
+   function renderChart(data) {
+  try {
+    console.log("API Response:", data);
 
-        if (!data.planets || !data.cusps) {
-          throw new Error("Missing planets or cusps data in the API response.");
-        }
-
-        // Prepare planets data for AstroChart
-        const planetsData = data.planets.map((planet) => ({
-          name: planet.name,
-          longitude: planet.longitude,
-          retrograde: false,
-        }));
-
-        // Create a new chart using AstroChart
-        const chart = new AstroChart.Chart(
-          'chart-container',
-          600,
-          600,
-          {
-            planets: planetsData,
-            houses: data.cusps,
-            theme: {
-              planet: { color: 'blue' },
-              house: { borderColor: 'gray' },
-              aspect: { lineColor: 'red' },
-            },
-          }
-        );
-
-        // Draw the radix (base) chart
-        chart.radix();
-      } catch (error) {
-        console.error("Error rendering chart:", error);
-        alert(`Error rendering chart: ${error.message}`);
-      }
+    if (!data.planets || !data.cusps) {
+      throw new Error("Missing planets or cusps data in the API response.");
     }
+
+    // Prepare planets data for AstroChart
+    const planetsData = data.planets.map((planet) => ({
+      name: planet.name,
+      longitude: planet.longitude,
+      retrograde: false,
+    }));
+
+    // Initialize the AstroChart
+    const chart = new window.AstroChart.Chart(
+      'chart-container',
+      600,
+      600,
+      {
+        planets: planetsData,
+        houses: data.cusps,
+        theme: {
+          planet: { color: 'blue' },
+          house: { borderColor: 'gray' },
+          aspect: { lineColor: 'red' },
+        },
+      }
+    );
+
+    // Draw the radix chart
+    chart.radix();
+  } catch (error) {
+    console.error("Error rendering chart:", error);
+    alert(`Error rendering chart: ${error.message}`);
+  }
+}
   </script>
 </body>
 </html>
