--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Natal Chart App</title>
 
-  <!-- Load the AstroChart script -->
-  <script src="https://tsarinaha.github.io/Hakaya/dist/astrochart.js"></script>
+  <!-- Load AstroChart from CDN -->
+  <script src="https://unpkg.com/@astrodraw/astrochart"></script>
 
   <style>
     body {
@@ -15,15 +15,12 @@
       background-color: #f4f4f9;
       padding: 20px;
     }
-
     h1 {
       color: #333;
     }
-
     form {
       margin: 20px 0;
     }
-
     input, button {
       padding: 10px;
       margin: 10px 0;
@@ -32,18 +29,15 @@
       border: 1px solid #ccc;
       border-radius: 5px;
     }
-
     button {
       background-color: #007bff;
       color: white;
       cursor: pointer;
       border: none;
     }
-
     button:hover {
       background-color: #0056b3;
     }
-
     #chart-container {
       margin: 20px auto;
       width: 600px;
@@ -103,44 +97,44 @@
     });
 
     // Function to render the natal chart using AstroChart
-   function renderChart(data) {
-  try {
-    console.log("API Response:", data);
+    function renderChart(data) {
+      try {
+        console.log('API Response:', data);
 
-    if (!data.planets || !data.cusps) {
-      throw new Error("Missing planets or cusps data in the API response.");
-    }
+        if (!data.planets || !data.cusps) {
+          throw new Error('Missing planets or cusps data in the API response.');
+        }
 
-    // Prepare planets data for AstroChart
-    const planetsData = data.planets.map((planet) => ({
-      name: planet.name,
-      longitude: planet.longitude,
-      retrograde: false,
-    }));
+        // Prepare planets data for AstroChart
+        const planetsData = data.planets.map((planet) => ({
+          name: planet.name,
+          longitude: planet.longitude,
+          retrograde: false,
+        }));
 
-    // Initialize the AstroChart
-    const chart = new window.AstroChart.Chart(
-      'chart-container',
-      600,
-      600,
-      {
-        planets: planetsData,
-        houses: data.cusps,
-        theme: {
-          planet: { color: 'blue' },
-          house: { borderColor: 'gray' },
-          aspect: { lineColor: 'red' },
-        },
+        // Create a new chart using AstroChart
+        const chart = new Chart(
+          'chart-container',
+          600,
+          600,
+          {
+            planets: planetsData,
+            houses: data.cusps,
+            theme: {
+              planet: { color: 'blue' },
+              house: { borderColor: 'gray' },
+              aspect: { lineColor: 'red' },
+            },
+          }
+        );
+
+        // Draw the radix chart
+        chart.radix();
+      } catch (error) {
+        console.error('Error rendering chart:', error);
+        alert(`Error rendering chart: ${error.message}`);
       }
-    );
-
-    // Draw the radix chart
-    chart.radix();
-  } catch (error) {
-    console.error("Error rendering chart:", error);
-    alert(`Error rendering chart: ${error.message}`);
-  }
-}
+    }
   </script>
 </body>
 </html>
