--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Natal Chart App</title>
 
-  <!-- Load AstroChart from CDN -->
-  <script src="https://unpkg.com/@astrodraw/astrochart"></script>
+  <!-- Load AstroChart from your fork -->
+  <script src="https://tsarinaha.github.io/Hakaya/dist/astrochart.js"></script>
 
   <style>
     body {
@@ -15,12 +15,15 @@
       background-color: #f4f4f9;
       padding: 20px;
     }
+
     h1 {
       color: #333;
     }
+
     form {
       margin: 20px 0;
     }
+
     input, button {
       padding: 10px;
       margin: 10px 0;
@@ -29,15 +32,18 @@
       border: 1px solid #ccc;
       border-radius: 5px;
     }
+
     button {
       background-color: #007bff;
       color: white;
       cursor: pointer;
       border: none;
     }
+
     button:hover {
       background-color: #0056b3;
     }
+
     #chart-container {
       margin: 20px auto;
       width: 600px;
