--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         }));
 
         // Create a new chart using AstroChart
-        const chart = new AstroChart.Chart(
+        const chart = new astrochart.Chart(
           'chart-container',
           600,
           600,
