--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Natal Chart App</title>
 
   <!-- Load astroChart from your fork -->
-  <script src="https://tsarinaha.github.io/Hakaya/dist/astrochart.js"></script>
+<script src="https://tsarinaha.github.io/Hakaya/dist/astrochart.js" defer></script>
 
   <style>
     body {
