--- a/index.html
+++ b/index.html
@@ -6,59 +6,11 @@
   <title>Natal Chart App</title>
 
   <!-- Load astroChart from your fork -->
-<script src="https://tsarinaha.github.io/Hakaya/dist/astrochart.js" defer></script>
-    <!-- Include CSS files -->
-  <link rel="stylesheet" href="dist/project/src/animation/animationStyles.css"> <!-- Example animation styles -->
-  <link rel="stylesheet" href="dist/project/src/theme.css"> <!-- Example theme styles -->
+  <script src="https://tsarinaha.github.io/Hakaya/dist/astrochart.js" defer></script>
 
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      background-color: #f4f4f9;
-      padding: 20px;
-    }
-
-    h1 {
-      color: #333;
-    }
-
-    #chart-container {
-      margin: 20px auto;
-      width: 600px;
-      height: 600px;
-      border: 1px dashed red; /* For debugging visibility */
-    }
-  </style>
-</head>
-
-<body>
-  <h1>Your Natal Chart with Animations</h1>
-
-  <!-- Container for the natal chart -->
-  <div id="chart-container"></div>
-
-  <!-- Include animation scripts -->
-  <script src="dist/project/src/animation/config.js"></script>
-  <script src="dist/project/src/animation/animationHandler.js"></script>
-  <script src="dist/project/src/animation/animationUtils.js"></script>
-
-  <!-- Include other source files -->
-  <script src="dist/project/src/astrochart.js"></script> <!-- Main astrochart script -->
-  <script src="dist/project/src/helpers.js"></script> <!-- Example helpers script -->
-  <script src="dist/project/src/utils.js"></script> <!-- Example utilities script -->
-  <script src="dist/project/src/chartRenderer.js"></script> <!-- Example chart rendering logic -->
-
-  <!-- App logic -->
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      // Ensure astrochart is available
-      if (typeof astrochart === "undefined") {
-        console.error("astrochart is not defined. Ensure the library is loaded correctly.");
-        return;
-      }
-
-      console.log("astrochart is available:", typeof astrochart);
+  <!-- Include CSS files -->
+  <link rel="stylesheet" href="dist/project/src/animation/animationStyles.css"> <!-- Animation styles -->
+  <link rel="stylesheet" href="dist/project/src/theme.css"> <!-- Theme styles -->
 
   <style>
     body {
@@ -120,126 +72,124 @@
   <!-- Container for the natal chart -->
   <div id="chart-container"></div>
 
-  <script>
-    // Listen for form submission
-    document.getElementById('natal-chart-form').addEventListener('submit', async function (e) {
-      e.preventDefault();
+  <!-- Include animation scripts -->
+  <script src="dist/project/src/animation/config.js"></script>
+  <script src="dist/project/src/animation/animationHandler.js"></script>
+  <script src="dist/project/src/animation/animationUtils.js"></script>
 
-      // Collect user input
-      const requestData = {
-        name: document.getElementById('name').value,
-        birth_date: document.getElementById('birth_date').value,
-        birth_time: document.getElementById('birth_time').value,
-        location: document.getElementById('location').value,
+  <!-- Include other source files -->
+  <script src="dist/project/src/astrochart.js"></script>
+  <script src="dist/project/src/helpers.js"></script>
+  <script src="dist/project/src/utils.js"></script>
+  <script src="dist/project/src/chartRenderer.js"></script>
+
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      // Ensure astrochart is available
+      const astro = window.astrochart || astrochart;
+      if (!astro) {
+        console.error("astrochart is not defined. Ensure the library is loaded correctly.");
+        return;
+      }
+
+      console.log("astrochart is available:", typeof astro);
+
+      // Listen for form submission
+      document.getElementById('natal-chart-form').addEventListener('submit', async function (e) {
+        e.preventDefault();
+
+        // Collect user input
+        const requestData = {
+          name: document.getElementById('name').value,
+          birth_date: document.getElementById('birth_date').value,
+          birth_time: document.getElementById('birth_time').value,
+          location: document.getElementById('location').value,
+        };
+
+        try {
+          // POST the data to your API
+          const response = await fetch('https://astrologychartapi.onrender.com/calculate_chart/', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify(requestData),
+          });
+
+          const data = await response.json();
+
+          if (data.error) {
+            alert(`Error: ${data.error}`);
+          } else {
+            // Render the chart with the received data
+            renderChart(data);
+          }
+        } catch (error) {
+          console.error("Error fetching data from API:", error.stack || error);
+          alert(`Error fetching data: ${error.message || error}`);
+        }
+      });
+
+      // Function to render the natal chart using astrochart
+      function renderChart(data) {
+        try {
+          console.log("API Response:", data);
+
+          // Validate planets and cusps data
+          if (!data.planets || !data.cusps) {
+            throw new Error("Missing planets or cusps data in the API response.");
+          }
+
+          const planetsData = data.planets.map((planet) => ({
+            name: planet.name || "Unknown",
+            longitude: planet.longitude || 0,
+            retrograde: planet.retrograde || false,
+          }));
+
+          const cuspsData = data.cusps.slice(0, 12).map((cusp) => cusp || 0);
+
+          console.log("Planets data for chart:", planetsData);
+          console.log("Cusps data for chart:", cuspsData);
+
+          const container = document.getElementById("chart-container");
+          if (container.offsetWidth === 0 || container.offsetHeight === 0) {
+            throw new Error("Chart container has invalid dimensions. Please check CSS.");
+          }
+
+          console.log("Initializing astrochart.Chart...");
+          const chart = new astro.Chart(
+            'chart-container',
+            600,
+            600,
+            {
+              planets: planetsData,
+              houses: cuspsData,
+              theme: {
+                planet: { color: 'blue' },
+                house: { borderColor: 'gray' },
+                aspect: { lineColor: 'red' },
+              },
+            }
+          );
+
+          chart.radix();
+          console.log("Chart rendered successfully.");
+        } catch (error) {
+          console.error("Error rendering chart:", error.stack || error);
+          alert(`Error rendering chart: ${error.message || error}`);
+        }
+      }
+
+      // Minimal chart test with static data
+      const sampleData = {
+        planets: [
+          { name: "Sun", longitude: 100, retrograde: false },
+          { name: "Moon", longitude: 200, retrograde: false },
+        ],
+        cusps: [30, 60, 90, 120, 150, 180, 210, 240, 270, 300, 330, 360],
       };
 
-      try {
-        // POST the data to your API
-        const response = await fetch('https://astrologychartapi.onrender.com/calculate_chart/', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(requestData),
-        });
-
-        const data = await response.json();
-
-        if (data.error) {
-          alert(`Error: ${data.error}`);
-        } else {
-          // Render the chart with the received data
-          renderChart(data);
-        }
-      } catch (error) {
-        console.error("Error fetching data from API:", error.stack || error);
-        alert(`Error fetching data: ${error.message || error}`);
-      }
-    });
-
-    // Function to render the natal chart using astrochart
-    function renderChart(data) {
-      try {
-        // Validate astrochart existence
-        const astro = window.astrochart || astrochart;
-        if (!astro) {
-          throw new ReferenceError("astrochart is not defined. Ensure the library is loaded.");
-        }
-
-        console.log("astrochart is available:", typeof astro);
-
-        // Validate planets and cusps data
-        if (!data.planets || !data.cusps) {
-          throw new Error("Missing planets or cusps data in the API response.");
-        }
-        if (!Array.isArray(data.planets) || !data.planets.length) {
-          throw new Error("Planets data must be a non-empty array.");
-        }
-        if (!Array.isArray(data.cusps) || data.cusps.length !== 12) {
-          throw new Error("Cusps data must be an array with exactly 12 elements.");
-        }
-
-        console.log("Validated Planets:", data.planets);
-        console.log("Validated Cusps:", data.cusps);
-
-        const planetsData = data.planets.map((planet) => ({
-          name: planet.name || "Unknown",
-          longitude: planet.longitude || 0,
-          retrograde: planet.retrograde || false,
-        }));
-
-        const cuspsData = data.cusps.slice(0, 12).map((cusp) => cusp || 0);
-
-        console.log("Planets data for chart:", planetsData);
-        console.log("Cusps data for chart:", cuspsData);
-
-        // Check chart container dimensions
-        const container = document.getElementById("chart-container");
-        console.log("Chart Container Exists:", !!container);
-        console.log("Chart Container Dimensions:", container.offsetWidth, container.offsetHeight);
-
-        if (container.offsetWidth === 0 || container.offsetHeight === 0) {
-          throw new Error("Chart container has invalid dimensions. Please check CSS.");
-        }
-
-        // Create a new chart using astrochart
-        console.log("Initializing astrochart.Chart...");
-        const chart = new astro.Chart(
-          'chart-container',
-          600,
-          600,
-          {
-            planets: planetsData,
-            houses: cuspsData,
-            theme: {
-              planet: { color: 'blue' },
-              house: { borderColor: 'gray' },
-              aspect: { lineColor: 'red' },
-            },
-          }
-        );
-
-        chart.radix();
-        console.log("Chart rendered successfully.");
-      } catch (error) {
-        console.error("Error rendering chart:", error.stack || error);
-        alert(`Error rendering chart: ${error.message || error}`);
-      }
-    }
-
-    // Minimal chart test with static data
-    const sampleData = {
-      planets: [
-        { name: "Sun", longitude: 100, retrograde: false },
-        { name: "Moon", longitude: 200, retrograde: false },
-      ],
-      cusps: [30, 60, 90, 120, 150, 180, 210, 240, 270, 300, 330, 360],
-    };
-
-    console.log("Testing with static sample data...");
-    try {
+      console.log("Testing with static sample data...");
       renderChart(sampleData);
-    } catch (error) {
-      console.error("Error rendering static sample data:", error.stack || error);
-    }
+    });
   </script>
 </body>
 </html>
