--- a/index.html
+++ b/index.html
@@ -20,11 +20,36 @@
       color: #333;
     }
 
+    form {
+      margin: 20px 0;
+    }
+
+    input, button {
+      padding: 10px;
+      margin: 10px 0;
+      width: 300px;
+      max-width: 90%;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+
+    button {
+      background-color: #007bff;
+      color: white;
+      cursor: pointer;
+      border: none;
+    }
+
+    button:hover {
+      background-color: #0056b3;
+    }
+
     #chart-container {
       margin: 20px auto;
       width: 600px;
       height: 600px;
       border: 1px solid #ccc;
+      background-color: #fff;
     }
   </style>
 </head>
@@ -32,42 +57,95 @@
 <body>
   <h1>Your Natal Chart</h1>
 
+  <!-- Form to input birth details -->
+  <form id="natal-chart-form">
+    <input type="text" id="name" placeholder="Enter your name" required>
+    <input type="date" id="birth_date" required>
+    <input type="time" id="birth_time" required>
+    <input type="text" id="location" placeholder="Enter your birth location" required>
+    <button type="submit">Generate Chart</button>
+  </form>
+
   <!-- Chart Container -->
   <div id="chart-container"></div>
 
   <script>
     document.addEventListener("DOMContentLoaded", function () {
-      // Ensure astrochart is available
+      // Check if astrochart is available
       if (typeof window.astrochart === "undefined") {
         console.error("astrochart is not defined. Ensure the library is loaded correctly.");
         return;
       }
       console.log("astrochart loaded successfully.");
 
-      // Test with sample data
-      const sampleData = {
-          planets: [
-              { name: "Sun", longitude: 100, retrograde: false },
-              { name: "Moon", longitude: 200, retrograde: false },
-          ],
-          cusps: [30, 60, 90, 120, 150, 180, 210, 240, 270, 300, 330, 360],
-      };
+      // Handle form submission
+      const form = document.getElementById("natal-chart-form");
+      form.addEventListener("submit", async function (e) {
+        e.preventDefault();
 
-      try {
-        const chart = new astrochart.Chart("chart-container", 600, 600, {
-          planets: sampleData.planets,
-          houses: sampleData.cusps,
-          theme: {
-            planet: { color: 'blue' },
-            house: { borderColor: 'gray' },
-            aspect: { lineColor: 'red' },
-          },
-        });
+        const requestData = {
+          name: document.getElementById("name").value,
+          birth_date: document.getElementById("birth_date").value,
+          birth_time: document.getElementById("birth_time").value,
+          location: document.getElementById("location").value,
+        };
 
-        chart.radix();
-        console.log("Chart rendered successfully.");
-      } catch (error) {
-        console.error("Error rendering chart:", error.message);
+        console.log("Form submitted with data:", requestData);
+
+        try {
+          // Fetch data from the API
+          const response = await fetch("https://astrologychartapi.onrender.com/calculate_chart/", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify(requestData),
+          });
+
+          const data = await response.json();
+          console.log("API Response:", data);
+
+          if (data.error) {
+            alert(`Error from API: ${data.error}`);
+            return;
+          }
+
+          // Validate the response
+          if (!Array.isArray(data.planets) || data.planets.length === 0 || data.cusps.length !== 12) {
+            throw new Error("Invalid data structure received from API.");
+          }
+
+          // Render the natal chart
+          renderChart(data);
+        } catch (error) {
+          console.error("Error fetching or rendering data:", error.message);
+          alert(`Error: ${error.message}`);
+        }
+      });
+
+      // Render the natal chart
+      function renderChart(data) {
+        try {
+          const container = document.getElementById("chart-container");
+          console.log("Chart container dimensions:", container.offsetWidth, container.offsetHeight);
+
+          const chart = new astrochart.Chart("chart-container", 600, 600, {
+            planets: data.planets.map((planet) => ({
+              name: planet.name,
+              longitude: planet.longitude,
+              retrograde: planet.retrograde || false,
+            })),
+            houses: data.cusps,
+            theme: {
+              planet: { color: "blue" },
+              house: { borderColor: "gray" },
+              aspect: { lineColor: "red" },
+            },
+          });
+
+          chart.radix();
+          console.log("Chart rendered successfully.");
+        } catch (error) {
+          console.error("Error rendering chart:", error.message);
+        }
       }
     });
   </script>
